# BallDetection

./: .gitignore
SimpleViewer_openNI/: CMakeLists.txt
SimpleViewer_openNI/include/: Viewer.h
SimpleViewer_openNI/src/: Viewer.cpp  main.cpp
openni2_support/: CMakeLists.txt
realsense/: CMakeLists.txt  rs-align.cpp
stream/: CmakeLists.txt
stream/src/: main.cpp
test_video/src/: main.cpp
